@@ -1641,4 +1641,10 @@
 /[A-`]/iB,utf
     abcdefghijklmno
 
+/(?<=\K\x{17f})/g,utf,aftertext
+    \x{17f}\x{17f}\x{17f}\x{17f}\x{17f}
+
+/(?<=\K\x{17f})/altglobal,utf,aftertext
+    \x{17f}\x{17f}\x{17f}\x{17f}\x{17f}
+
 # End of testinput5 
